--- a/css/subheader.css
+++ b/css/subheader.css
@@ -32,7 +32,7 @@
     top: 0;
     width: 130px;
     padding: 20px 70px 20px 30px;
-    background: url('../images/cloud.png');
+    background: url('../images/cloud.png') no-repeat;
     background-size: 100% 100%;
     font-size: 16px;
     text-align: center;
@@ -116,14 +116,15 @@
     bottom: 40px;
     /* flexible-container padding */
     left: 50px;
-    right: 450px;
+    /*right: 450px;*/
 }
 
 .subheader__feature {
     display: inline-block;
     text-transform: uppercase;
     width: 33.33%;
-    margin: 0;
+    min-width: 250px;
+    /*margin: 0;*/
     padding: 30px 30px 20px 60px;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
